-
Bug
-
Resolution: Done
-
P3: Somewhat important
-
4.4.3
-
None
-
1908e12284e1f6f25bfb46df3ce9659c6e19a50c
The documentation for QCoreApplication::flush() says
"Flushes the platform specific event queues.
If you are doing graphical changes inside a loop that does not return to the event loop on asynchronous window systems like X11 or double buffered window systems like Mac OS X, and you want to visualize these changes immediately (e.g. Splash Screens), call this function."
QCoreApplication::flush() calls flush() on its event dispatcher, whose documentation says
"Flushes the event queue. This normally returns almost immediately. Does nothing on platforms other than X11."
However, on X11, and if Qt was built with Glib support, QEventDispatcherGlib is used, whose flush() implementation is empty. This seems to contradict the above documentation and should be fixed by either updating the documentation accordingly or properly implementing QEventDispatcherGlib::flush().