QGuiEventDispatcherGlib::flush() does nothing despite documentation otherwise.

The documentation for flush() is that it flushes the outgoing command
queue on X11, but not when using Glib. Fix this by implementing flush()
in the GUI Glib dispatcher.

Task-number: QTBUG-3185